@@ -40,7 +40,16 @@
                   Remember the default profile usually contains storage information &
                   network details!
               </div>
-
+          </div>
+          <div class="form-group">
+              <label> GPU's (Optional) </label>
+              <select class="form-control" id="deployContainerGpu" multiple>
+                  <option value="">Please select a host </option>
+              </select>
+              <div id="deployContainerGpuWarning" class="alert alert-danger">
+                  We currently only support adding gpu's when creating a contaienr
+                  on one host.
+              </div>
           </div>
       </div>
       <div class="modal-footer">
@@ -68,7 +77,38 @@ $("#deployCloudConfigHosts").tokenInput(globalUrls.hosts.search.search, {
     propertyToSearch: "host",
     tokenValue: "hostId",
     preventDuplicates: false,
-    theme: "facebook"
+    theme: "facebook",
+    onAdd: function(token){
+        let h = $("#deployCloudConfigHosts").tokenInput("get")
+        if(h.length > 1){
+            $("#deployContainerGpuWarning").show();
+            $("#deployContainerGpu").hide();
+        }else{
+            let x = {hostId: h[0].hostId}
+            ajaxRequest(globalUrls.hosts.gpu.getAll, x, (data)=>{
+                data =  $.parseJSON(data);
+                //TODO if len == 0
+                let gpus = "";
+                $.each(data, function(i, item){
+                    gpus += `<option value="${item.pci_address}">${item.product}</option>`
+                });
+                $("#deployContainerGpu").empty().append(gpus);
+            });
+        }
+    },
+    onDelete: function(){
+        let h = $("#deployCloudConfigHosts").tokenInput("get")
+        if(h.length > 1){
+            $("#deployContainerGpuWarning").show();
+            $("#deployContainerGpu").hide();
+        }else{
+            if(h.length == 0){
+                $("#deployContainerGpu").empty().append("<option value=''>Please select a host</option>");
+            }
+            $("#deployContainerGpuWarning").hide();
+            $("#deployContainerGpu").show();
+        }
+    }
 });
 
 $("#deployCloudConfigImage").tokenInput(globalUrls.images.search.searchAllHosts, {
@@ -112,9 +152,15 @@ $("#modal-cloudConfig-deploy").on("click", "#deployCloudConfig", function(){
         makeToastr(JSON.stringify({state: "error", message: "Please provide atleast one host"}));
         $("#deployCloudConfigHosts").focus();
         return false;
-    } else if(image.legnth == 0 || !image[0].hasOwnProperty("details")){
+    } else if(image.length == 0 || !image[0].hasOwnProperty("details")){
         makeToastr(JSON.stringify({state: "error", message: "Please select image"}));
         return false;
+    }
+
+    let gpus = [];
+
+    if(hosts.length == 1){
+        gpus = $("#deployContainerGpu").val();
     }
 
     let x = {
@@ -123,7 +169,8 @@ $("#modal-cloudConfig-deploy").on("click", "#deployCloudConfig", function(){
         cloudConfigId: deployCloudConfigObj.cloudConfigId,
         profileName: profileName,
         additionalProfiles: profileIds,
-        imageDetails: image[0].details
+        imageDetails: image[0].details,
+        gpus: gpus
     };
 
     ajaxRequest(globalUrls.cloudConfig.deploy, x, (response)=>{
